Updated fiquela library, added support for INTO clause and using DESCRIBE method for extending schema
